Modify to multi-stage Dockerfile.